# StaticFileServer.rs

./: Cargo.toml  Readme.md  build.rs
src/: main.rs
