[package]
name = "staticserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "162fafa0f1b5d9045bf342356671859f0f21c4cc" }

[build-dependencies]
embed-manifest = "1.3.1"